--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
     display: table;
     width: 100%;
     height: 100%;
+    z-index: 9;
 }
 h1{
     font-size: 40px;
@@ -61,4 +62,26 @@ p{
     vertical-align: middle;
     position: relative;
     display: table-cell;
+}
+.menu{
+    list-style: none;
+    font-family: sans-serif;
+    position: absolute;
+    top: 10px;
+    right:30px;
+    z-index:10;
+    cursor: pointer;
+}
+.links{
+    float: left;
+    color: #fff;
+    padding-top: 5px;
+    padding-left: 9px;
+    padding-right: 9px;
+    padding-bottom: 5px;
+    font-family: fantasy;
+    font-size: 20px;
+}
+.links:hover{
+    background-color: dodgerblue;
 }
